# meridian-on-gcp

./: .dockerignore  .editorconfig  .flake8  .gitignore  .pylintrc  .yamllint  BaseImage.dockerfile  GPUBaseImage.dockerfile  README.md  mypy.ini  poetry.toml  pyproject.toml  tasks.py
components/: image_builder.py
config/: config.yaml  config.yaml.tfpl  config.yaml.tftpl
container/: BaseImage.dockerfile  Dockerfile  image_builder.py
docs/: DATA_SCHEMA.md
infra/: README.md  main.tf  pipelines.tf  terraform-sample.tfvars  terraform-template.tfvars  variables.tf  versions.tf
infra/cloudshell/: tutorial.md
notebooks/: Meridian-kfp-pipeline-BQ-TO-GCS.ipynb  Meridian_Pipeline_BQ_TO_BQ.ipynb  meridian-getting-started.ipynb  meridian_quick_install.ipynb
pipelines/: compiler.py  meridian_modeling_pipeline.py  meridian_modelling_pipeline.py  meridian_postmodeling_pipeline.py  meridian_premodeling_pipeline.py  meridian_premodelling_pipeline.py  pipeline_ops.py  scheduler.py  uploader.py  utils.py
pipelines/components/: data_analysis.py  helpers.py  modeling.py  post-modeling.py  post_modeling.py  premodeling.py
scripts/: common.sh  resume-session.sh  set-env.sh  set-tf-vars.sh
