# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
# Project metadata. Available keys are documented at:
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata
name = "meridian-on-gcp"
version = "1.0.0"
description = "Meridian on GCP code sample"
authors = [
  {name = "Marketing Analytics Solutions Architects", email="ma-se@google.com"},
]
classifiers = [  # List of https://pypi.org/classifiers/
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
keywords = [
  "meridian",
  "googlecloud",
  "vertexai"
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "arviz",
  "altair >= 5",
  "immutabledict",
  "joblib",
  "numpy >= 2.0.2, < 3",
  "pandas >= 2.2.2, < 3",
  "scipy >= 1.13.1, < 2",
  "tensorflow >= 2.18, < 2.19",
  "tensorflow-probability >= 0.25, < 0.26",
  "tf-keras >= 2.18, < 2.19",
  "xarray",
]

[tool.poetry.dependencies]
python = ">=3.10,<=3.11"
google-cloud-aiplatform = "1.77.0"
shapely = "<2.0.0"
google-cloud = "^0.34.0"
jinja2 = ">=3.0.1,<4.0.0"
pip = "23.3"
invoke = "2.2.0"
pre-commit = ">=2.14.1,<3.0.0"
pandas = "1.3.5"
google-cloud-bigquery = "2.30.0"
google-cloud-pipeline-components = "2.6.0"
google-auth = "^2.14.1"
google-cloud-storage = "^2.6.0"
kfp = "2.4.0"
kfp-server-api = "2.0.5"
urllib3 = "1.26.18"
toml = "0.10.2"
docker = "^6.0.1"
db-dtypes = "1.2.0"
optuna = "3.2.0"
scikit-learn = "1.2.2"
google-cloud-pubsub = "2.15.0"
pyarrow = "15.0.2"
google-auth-oauthlib = "^1.2.1"
oauth2client = "^4.1.3"
google-cloud-core = "^2.4.1"
sympy="1.13.1"
google-cloud-resource-manager="1.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

reportMissingImports=true
reportMissingTypeStubs=false