# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


[project]
name = "meridian-on-gcp"
version = "1.0.0"
description = "Meridian on GCP code sample"
authors = [
  {name = "Marketing Analytics Solutions Architects", email="ma-se@google.com"},
]
classifiers = [  # List of https://pypi.org/classifiers/
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
keywords = [
  "meridian",
  "googlecloud",
  "vertexai"
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "altair>=5",
    "arviz>=0.21.0",
    "docker>=6.0.1",
    "google-auth>=2.14.1",
    "google-auth-oauthlib>=1.2.1",
    "google-cloud>=0.34.0",
    "google-cloud-aiplatform==1.77.0",
    "google-cloud-bigquery==2.30.0",
    "google-cloud-core>=2.4.1",
    "google-cloud-pipeline-components==2.6.0",
    "google-cloud-pubsub==2.15.0",
    "google-cloud-resource-manager==1.13.0",
    "google-cloud-storage>=2.6.0",
    "immutabledict>=4.2.1",
    "jinja2>=3.0.1,<4.0.0",
    "joblib>=1.4.2",
    "kfp==2.4.0",
    "kfp-server-api==2.0.5",
    "meridian>=0.4.0",
    "numpy>=2.0.2,<3",
    "oauth2client>=4.1.3",
    "pandas>=2.2.2,<3",
    "pip==23.3",
    "pylint>=2.6.0",
    "scipy>=1.13.1,<2",
    "tensorflow>=2.18,<2.19",
    "tensorflow-probability>=0.25,<0.26",
    "tf-keras>=2.18,<2.19",
    "tensorflow[and-cuda] >= 2.18, < 2.19",
    "urllib3==1.26.18",
]

[tool.poetry.dependencies]
python = ">=3.10,<=3.11"