# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


[project]
name = "meridian-on-gcp"
version = "1.0.0"
description = "Meridian on GCP code sample"
authors = [
  {name = "Marketing Analytics Solutions Architects", email="ma-se@google.com"},
]
classifiers = [  # List of https://pypi.org/classifiers/
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
keywords = [
  "meridian",
  "googlecloud",
  "vertexai"
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docker>=6.0.1",
    "google-auth>=2.14.1",
    "google-auth-oauthlib>=1.2.1",
    "google-cloud>=0.34.0",
    "google-cloud-aiplatform==1.77.0",
    "google-cloud-bigquery==2.30.0",
    "google-cloud-core>=2.4.1",
    "google-cloud-pipeline-components==2.6.0",
    "google-cloud-pubsub==2.15.0",
    "google-cloud-resource-manager==1.13.0",
    "google-cloud-storage>=2.6.0",
    "immutabledict>=4.2.1",
    "jinja2>=3.1.2,<4.0.0",
    "joblib>=1.4.2",
    "kfp==2.4.0",
    "kfp-server-api==2.0.5",
    "oauth2client>=4.1.3",
    "pip==23.3",
    "pylint>=2.6.0",
    "invoke==2.2.0",
]

[tool.setuptools.packages.find]
where = ["."]  # list of folders that contain the packages (["."] by default)
include = ["pipelines"]  # package names should match these glob patterns (["*"] by default)
exclude = []  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)

[tool.poetry.dependencies]
python = ">=3.10,<=3.11"

[tool.uv]
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]